public/stylesheets/screen.css
/* ... */
footer#pageFooter nav ul {
	padding: 0;
	margin: 0;
	height: 60px;

	list-style: none;
}
footer#pageFooter nav ul li {
	display: inline-block;
	margin: 0 0.9em;
	height: 60px;
	line-height: 58px;
}
footer#pageFooter nav ul li:first-child {
	margin-left: 0;
}
footer#pageFooter nav ul li a {
	font-family: "Open Sans", sans-serif;
	font-size: 0.85rem;
	color: #777;
	text-decoration: underline;
}

footer#pageFooter #footerLogo {
	float: right;
	opacity: 0.4;
	margin-top: 11px;
	margin-right: 4px;

	transform: rotate(18deg);
}

#gabeFace {
	transition: left 0.2s ease-out;
	pointer-events: none;
	z-index: 9999;
}

#cursor {
	position: absolute;
	z-index: 100;
	margin-top: -46px;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	pointer-events: none;
}

button#claimConv {
	margin-left: 1em;
}

button#toggleCanvas {
	position: fixed;
	width: 125px;
	left: 50%;
	margin-left: -75px;
	text-align: center;
	bottom: 10px;
	z-index: 95;

	display: none;
}

section#main div.aboutProfile {
	width: 33.3%;
	margin-bottom: 40px;
	display: inline-block;
	text-align: center;
	vertical-align: top;
}
section#main div.aboutProfile img {
	box-sizing: border-box;
	max-width: 300px;
	width: 60%;
	padding: 20px;

	background-color: #fefefd;
	border: 1px solid #eaeadf;
	border-radius: 100%;
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
}
section#main div.aboutProfile h2 {
	font-family: "Open Sans", sans-serif;
	color: #555;
	font-weight: 600;
}
section#main div.aboutProfile p {
	text-align: left;
	font-size: 1.1rem;

	padding: 0 10px;
}

/* conversation stuff */

ul#conversations {
	list-style: none;
	padding: 0;
	margin: 20px 0;
	border-radius: 3px;
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
}
ul#conversations li.conversation {
	position: relative;
	height: 48px;

	border: 1px solid #bbb;
	border-bottom: none;
	background-color: #fefefd;

	font-family: "Open Sans", sans-serif;

	white-space: nowrap;
	overflow-x: hidden;
}
ul#conversations li.conversation:first-child {
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
}
ul#conversations li.conversation:last-child {
	border-bottom-left-radius: 4px;
	border-bottom-right-radius: 4px;
	border-bottom: 1px solid #bbb;
}
ul#conversations li.conversation div.link {
	position: relative;
	z-index: 11;

	display: inline-block;
	height: 48px;
	line-height: 48px;

	/*background-color: #fefefd;*/
	border-right: 1px solid #bbb;
	padding: 0 15px;
}
ul#conversations li.conversation div.member {
	display: inline-block;
}
ul#conversations li.conversation div.avatar {
	vertical-align: text-bottom;
	box-sizing: border-box;
	display: inline-block;
	height: 26px; width: 26px;
	margin: 0 0.3rem 0 0.5rem;
	position: relative;
	top: 2px;

	border-radius: 100%;
	border: 1px solid #e0e0e0;
}
ul#conversations li.conversation div.avatar img {
	max-height: 24px; max-width: 24px;
	border-radius: 100%;
	vertical-align: top;
}
ul#conversations li.conversation a {
	color: #666;
}
ul#conversations li.conversation div.memberList {
	display: inline-block;
	height: 48px;
	line-height: 48px;

	padding: 0 15px;

	color: #333;
}
ul#conversations li.conversation div.date {
	position: absolute;
	right: 0;
	display: inline-block;
	height: 47px;
	z-index: 10;
	padding-left: 5px;
	padding-right: 15px;

	background-color: #fefefd;
	border-top-right-radius: 3px;
	border-top-left-radius: 3px;

	font-size: 0.8rem;
	line-height: 48px;
	color: #777;
}
ul#conversations li.conversation div.date:before {
	position: absolute;
	left: -20px;
	width: 20px; height: 47px;
	display: inline-block;

	background: linear-gradient(to right, rgba(255, 255, 255, 0) , white);
	content: "";
}
ul#conversations li.conversation.deletable div.date {
	right: 48px;
	border-right: 1px solid #e0e0e0;
	border-top-right-radius: 0;
	padding-right: 15px;
}
ul#conversations li.conversation div.controls {
	float: right;
}
ul#conversations li.conversation div.controls button {
	position: relative;
	top: 8px;
	right: 15px;
}

div#conversationsMessage {
	padding: 20px 0;

	color: #999;
	font-family: "Open Sans", sans-serif;
	font-size: 1.3rem;
	text-align: center;
}

div#conversation {
	position: absolute;
	z-index: 49;
	left: 0; right: 0; bottom: 0; top: 0;
	box-sizing: border-box;
	overflow: hidden;
}
div#conversation section#messages {
	position: absolute;
	box-sizing: border-box;
	top: 0; left: 0; bottom: 0;
	width: 50%;
}
div#conversation section#messages header {
	position: absolute;
	z-index: 50;
	left: 0;
	right: 0;
	top: 0;
	padding: 10px 10px 10px 20px;
	height: 32px;
	border-bottom: 2px solid #6f9fce;
	background-color: rgba(254, 254, 253, 0.9);
	-webkit-backdrop-filter: blur(5px);
	backdrop-filter: blur(10px);
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
}
div#conversation section#messages header h1 {
	border: none;
	margin: 0;
	padding: 0;
	height: 34px;
	line-height: 24px;
	top: 0;
	color: #505055;
	font-weight: 600;
}
div#conversation section#messages header h1 span#conversationName {
	position: relative;
	top: 4px;
}
div#conversation section#messages header h1 div#nameChangeControls {
	display: inline-block;
	overflow: hidden;
}
div#conversation section#messages section#messagesContainer {
	box-sizing: border-box;

	overflow-y: auto;
	position: absolute;
	bottom: 0; top: 0;
	left: 0; right: 0;

	padding-top: 54px;
}
div#conversation section#messages section#messagesContainer button#loadMore {
	width: calc(100% - 20px);
	margin-top: 10px; margin-left: 10px;
}
div#conversation section#messages section#messagesContainer div.metaMessage {
	margin: 40px auto;
	max-width: 480px;
	width: 100%;

	font-family: "Open Sans", sans-serif;
	font-size: 0.85rem;
	color: #555;
	text-align: center;
}
div#conversation section#messages section#messagesContainer div.message {
	margin-top: 36px;
}
div#conversation section#messages section#messagesContainer div.message:last-child {
	margin-bottom: 56px;
}
/* ... */

